--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,69 @@
+absl-py==0.8.0
+astor==0.8.0
 atari-py==0.2.6
+atomicwrites==1.3.0
+attrs==19.1.0
+bokeh==1.3.4
+certifi==2019.9.11
+Click==7.0
 cloudpickle==1.2.2
 cycler==0.10.0
+dask==2.5.0
 deap==1.3.0
+distributed==2.5.1
+fsspec==0.5.1
 future==0.17.1
+gast==0.3.2
+google-pasta==0.1.7
+grpcio==1.16.1
 gym==0.14.0
 gym-retro==0.7.0
+h5py==2.9.0
+HeapDict==1.0.1
+importlib-metadata==0.23
+Jinja2==2.10.1
 joblib==0.13.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
+locket==0.2.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
 matplotlib==3.1.1
-mpi4py==3.0.2
+mkl-fft==1.0.14
+mkl-random==1.1.0
+mkl-service==2.3.0
+more-itertools==7.2.0
+msgpack==0.6.2
 numpy==1.17.2
 opencv-python==4.1.1.26
+packaging==19.2
 pandas==0.25.1
+partd==1.0.0
 Pillow==6.1.0
+pluggy==0.13.0
+protobuf==3.9.2
+psutil==5.6.3
+py==1.8.0
 pyglet==1.3.2
 pyparsing==2.4.2
+pytest==5.2.0
 python-dateutil==2.8.0
 pytz==2019.2
+PyYAML==5.1.2
 scipy==1.3.1
 six==1.12.0
-stable-baselines==2.7.0
+sortedcontainers==2.1.0
+stable-baselines==2.8.0
+tblib==1.4.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+toolz==0.10.0
+tornado==6.0.3
+wcwidth==0.1.7
+Werkzeug==0.16.0
+wrapt==1.11.2
+zict==1.0.0
+zipp==0.6.0
